force-app/main/default/objects/Case/fields/sub_list_for_change_to_Product__c.field-meta.xml
<CustomField>
    <fullName>sub_list_for_change_to_Product__c</fullName>
    <label>Sub list for Change to Product or Soluti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Immersion Workshop</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Certification for Consultants</fullName>
            </value>
            <value>
                <fullName>Change Management Project Support</fullName>
            </value>
            <value>
                <fullName>Change Portfolio Workshop</fullName>
            </value>
            <value>
                <fullName>CM Planning Workshop</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Experienced Practitioner Program</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Change Workshop</fullName>
            </value>
            <value>
                <fullName>Integrating Agile</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Strategic Alignment Workshop</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
            <value>
                <fullName>Prosci Portal</fullName>
            </value>
            <value>
                <fullName>Pract. eToolkit</fullName>
            </value>
            <value>
                <fullName>Impact Index</fullName>
            </value>
            <value>
                <fullName>ADKAR Dashboard</fullName>
            </value>
            <value>
                <fullName>PC Analyzer</fullName>
            </value>
            <value>
                <fullName>Research Hub</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>AGILE Impact Index</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>