force-app/main/default/objects/Case/fields/Subject_Matter_Expert_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter_Expert_if_applicable__c</fullName>
    <label>Subject Matter Expert (if applicable)</label>
    <type>TextArea</type>
</CustomField>