force-app/main/default/objects/Case/fields/Submitter_s_location__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_location__c</fullName>
    <label>Submitter&apos;s location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>GAN</fullName>
                <isActive>false</isActive>
                <label>GAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>