force-app/main/default/objects/Case/fields/Submitter_s_relationship_to_Prosci__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_relationship_to_Prosci__c</fullName>
    <label>Submitter&apos;s relationship to Prosci</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PCAI</fullName>
            </value>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>