force-app/main/default/objects/Case/fields/submitters_role__c.field-meta.xml
<CustomField>
    <fullName>submitters_role__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter&apos;s Role</label>
    <type>Text</type>
</CustomField>