force-app/main/default/objects/Case/fields/Suggested_timeline_to_implement__c.field-meta.xml
<CustomField>
    <fullName>Suggested_timeline_to_implement__c</fullName>
    <label>Suggested timeline to implement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>2X/Year</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>