force-app/main/default/objects/Case/fields/Third_Party_access_to_Prosci_Systems__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_access_to_Prosci_Systems__c</fullName>
    <label>Third Party access to Prosci Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>