force-app/main/default/objects/Case/fields/Third_party_consultants_or_Developers__c.field-meta.xml
<CustomField>
    <fullName>Third_party_consultants_or_Developers__c</fullName>
    <inlineHelpText>Does this project include third-party consultants or developers conducting business on behalf of the
organization? If so, please list.
Implication: The use of third-party service providers can introduce new information security risk into the enterprise
and into the overall business process. T</inlineHelpText>
    <label>Third-party consultants or Developers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>