force-app/main/default/objects/Case/fields/Third_party_description__c.field-meta.xml
<CustomField>
    <fullName>Third_party_description__c</fullName>
    <inlineHelpText>Does this project include third-party consultants or developers conducting business on behalf of the
organization? If so, please list.
Implication: The use of third-party service providers can introduce new information security risk into the enterprise
and into the overall business process. T</inlineHelpText>
    <label>Third-party description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>