force-app/main/default/objects/Case/fields/Third_Party_received_Prosci_IS_Privacy__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_received_Prosci_IS_Privacy__c</fullName>
    <label>Third Party received Prosci IS/Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>