force-app/main/default/objects/Case/fields/Time_Before_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Time_Before_Reviewed__c</fullName>
    <description>The amount of time within Business Hours that a Case spends in the &apos;New&apos; Status before getting reviewed and set to the &apos;Reviewed&apos; Status</description>
    <label>Time Before Reviewed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>