force-app/main/default/objects/Case/fields/Time_When_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Time_When_Reviewed__c</fullName>
    <description>When a ticket is changed from NEW to another status, the Date/Time is instantly recorded in this field (via Workflow trigger)</description>
    <inlineHelpText>When a ticket is changed from NEW to another status, the Date/Time is instantly recorded in this field (via Workflow trigger)</inlineHelpText>
    <label>Time When Reviewed</label>
    <type>DateTime</type>
</CustomField>