force-app/main/default/objects/Case/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>Timeline for project/change.</description>
    <inlineHelpText>Provide a description and timeline for the project/change.</inlineHelpText>
    <label>Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>