force-app/main/default/objects/Case/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>What is this person&apos;s title?</description>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>