force-app/main/default/objects/Case/fields/Tools_or_Technology__c.field-meta.xml
<CustomField>
    <fullName>Tools_or_Technology__c</fullName>
    <label>Tools or Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sidecar</fullName>
            </value>
            <value>
                <fullName>learning center</fullName>
            </value>
            <value>
                <fullName>ImpactIndex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>