force-app/main/default/objects/Case/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>