force-app/main/default/objects/Case/fields/Type_of_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change_Requested__c</fullName>
    <label>Type of Change Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error (Priority due to brand or client impact)</fullName>
            </value>
            <value>
                <fullName>Error (Other to be corrected when possible)</fullName>
            </value>
            <value>
                <fullName>Add New</fullName>
            </value>
            <value>
                <fullName>Modify Existing</fullName>
            </value>
            <value>
                <fullName>Retire or Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>