force-app/main/default/objects/Case/fields/Value_if_the_request_is_approved__c.field-meta.xml
<CustomField>
    <fullName>Value_if_the_request_is_approved__c</fullName>
    <label>Value if the request is approved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aligned with Prosci mission, vision, values</fullName>
            </value>
            <value>
                <fullName>Client success</fullName>
            </value>
            <value>
                <fullName>Client experience</fullName>
            </value>
            <value>
                <fullName>Financial return</fullName>
            </value>
            <value>
                <fullName>Competitive response</fullName>
            </value>
            <value>
                <fullName>Solution portfolio gap</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>