force-app/main/default/objects/Case/fields/Vendor_access_to_personal_data__c.field-meta.xml
<CustomField>
    <fullName>Vendor_access_to_personal_data__c</fullName>
    <inlineHelpText>Will this vendor have access to or store personal data for Prosci?</inlineHelpText>
    <label>Vendor access to personal data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>