force-app/main/default/objects/Case/fields/Vendor_List__c.field-meta.xml
<CustomField>
    <fullName>Vendor_List__c</fullName>
    <inlineHelpText>Please list new vendors.</inlineHelpText>
    <label>Vendor List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>