force-app/main/default/objects/Case/fields/Vendor_require_login_to_their_software__c.field-meta.xml
<CustomField>
    <fullName>Vendor_require_login_to_their_software__c</fullName>
    <label>Vendor require login to their software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>