force-app/main/default/objects/Case/fields/What_is_the_incident_related_to__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_incident_related_to__c</fullName>
    <label>What is the incident related to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop Hardware</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Cloud System or Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>