force-app/main/default/objects/Case/fields/What_type_of_Malware__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_Malware__c</fullName>
    <label>What type of Malware?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phishing Attack</fullName>
            </value>
            <value>
                <fullName>Unauthorized Software</fullName>
            </value>
            <value>
                <fullName>Other External Malware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>