force-app/main/default/objects/Case/fields/When_was_the_incident_discovered__c.field-meta.xml
<CustomField>
    <fullName>When_was_the_incident_discovered__c</fullName>
    <label>When was the incident discovered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In the last 24 hours</fullName>
            </value>
            <value>
                <fullName>Between 24-48 hours</fullName>
            </value>
            <value>
                <fullName>More than 48 hours ago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>