force-app/main/default/objects/Case/fields/Your_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Your_Email_Address__c</fullName>
    <label>Your Email Address:</label>
    <type>TextArea</type>
</CustomField>