force-app/main/default/objects/Case/fields/Your_Function_or_Location__c.field-meta.xml
<CustomField>
    <fullName>Your_Function_or_Location__c</fullName>
    <label>Your Function or Location:</label>
    <type>TextArea</type>
</CustomField>