force-app/main/default/objects/Case/fields/Your_Name__c.field-meta.xml
<CustomField>
    <fullName>Your_Name__c</fullName>
    <label>Your Name:</label>
    <type>TextArea</type>
</CustomField>