force-app/main/default/objects/Case/recordTypes/Change_Approval_Process_Submission_Form.recordType-meta.xml
<RecordType>
    <fullName>Change_Approval_Process_Submission_Form</fullName>
    <active>true</active>
    <businessProcess>Customer Service Support</businessProcess>
    <label>Change Approval Process Submission Form</label>
</RecordType>