force-app/main/default/objects/Case/recordTypes/Customer_Service_Support.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service_Support</fullName>
    <active>false</active>
    <businessProcess>Customer Service Support</businessProcess>
    <label>Customer Service Support</label>
</RecordType>