force-app/main/default/objects/Case/recordTypes/Delivery_Product_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Product_Change_Request</fullName>
    <active>false</active>
    <businessProcess>Customer Service Support</businessProcess>
    <label>Delivery Product Change Request</label>
</RecordType>