force-app/main/default/objects/Case/recordTypes/ICT_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>ICT_Support_Request</fullName>
    <active>true</active>
    <businessProcess>Portal Support Process</businessProcess>
    <label>ICT Support Request</label>
</RecordType>