force-app/main/default/objects/Case/recordTypes/Incident_Response.recordType-meta.xml
<RecordType>
    <fullName>Incident_Response</fullName>
    <active>true</active>
    <businessProcess>ICT Support</businessProcess>
    <label>Incident Response</label>
</RecordType>