force-app/main/default/objects/Case/recordTypes/Portal_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Portal_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Portal Support Process</businessProcess>
    <label>Portal Support Case</label>
</RecordType>