force-app/main/default/objects/Case/recordTypes/Salesforce_Change_request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Change_request</fullName>
    <active>false</active>
    <businessProcess>Customer Service Support</businessProcess>
    <label>Salesforce Change request</label>
</RecordType>