force-app/main/default/objects/Case/recordTypes/Security_and_Privacy.recordType-meta.xml
<RecordType>
    <fullName>Security_and_Privacy</fullName>
    <active>true</active>
    <businessProcess>ICT Support</businessProcess>
    <label>Security and Privacy</label>
</RecordType>