force-app/main/default/objects/Case/validationRules/Time_Before_Reviewed_Can_Not_be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Before_Reviewed_Can_Not_be_Edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISNULL(PRIORVALUE(Time_Before_Reviewed__c))),
				ISCHANGED(Time_Before_Reviewed__c))</errorConditionFormula>
    <errorMessage>Time Before Review Can Not Be Changed Once Set</errorMessage>
</ValidationRule>