force-app/main/default/objects/Case/listViews/Canada_Operations_Cases.listView-meta.xml
<ListView>
    <fullName>Canada_Operations_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Cheryl Ann Calina,Nicole Sibley,Wendy Soulis,Fallon,Karthik,Kenny,Ashlea,Haz Chigora</value>
    </filters>
    <label>Canada Operations Cases</label>
</ListView>