force-app/main/default/objects/Case/listViews/Change_Acceptance_Board.listView-meta.xml
<ListView>
    <fullName>Change_Acceptance_Board</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Delivery_Product_Change_Request</value>
    </filters>
    <label>Change Acceptance Board</label>
</ListView>