force-app/main/default/objects/Case/listViews/Change_Approval_Request_Open.listView-meta.xml
<ListView>
    <fullName>Change_Approval_Request_Open</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Your_Name__c</columns>
    <columns>Your_Email_Address__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Change_Approval_Process_Submission_Form</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Change Approval Request - Open</label>
</ListView>