force-app/main/default/objects/Case/listViews/ICT_Help_Desk_Open.listView-meta.xml
<ListView>
    <fullName>ICT_Help_Desk_Open</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Last_Comment_date__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>System__c</columns>
    <columns>Due_date__c</columns>
    <columns>Time_Before_Reviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ICT_Support_Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>ICT Support Queue</value>
    </filters>
    <label>ICT Help Desk Open (Assigned)</label>
</ListView>