force-app/main/default/objects/Case/listViews/Incident_Response_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Incident_Response_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Incident Response Queue</label>
    <queue>Incident_Response_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>