force-app/main/default/objects/Case/listViews/John_s_Cases.listView-meta.xml
<ListView>
    <fullName>John_s_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>System__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Last_Comment_date__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Due_date__c</columns>
    <columns>Hours_Before_Reviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ICT_Support_Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>John Lee</value>
    </filters>
    <label>John&apos;s Cases</label>
</ListView>