force-app/main/default/objects/Case/listViews/Karthik_s_Cases.listView-meta.xml
<ListView>
    <fullName>Karthik_s_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Last_Comment_date__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Time_When_Reviewed__c</columns>
    <columns>Hours_Before_Reviewed__c</columns>
    <columns>System__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Karthik</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Karthik&apos;s Cases</label>
</ListView>