force-app/main/default/objects/Case/listViews/My_Case_Teams.listView-meta.xml
<ListView>
    <fullName>My_Case_Teams</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Last_Comment_date__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>System__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Type_Other__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Due_date__c</columns>
    <columns>Hours_Before_Reviewed__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Case Teams</label>
</ListView>